v2.5.x/site/en/home/home.md
---
id: home.md
---

<div class="doc-h1-wrapper">

  <h1 class="title">
    Welcome to Milvus Docs!
  </h1>

  <h2 class="sub-title">
    Here you will learn about what Milvus is, and how to install, use, and deploy Milvus to build an application according to your business need.
  </h2>

</div>

<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">Try Managed Milvus For Free!</h2>
    <p class="promotion-desc">Zilliz Cloud is hassle-free, powered by Milvus and 10x faster.</p>
  </div>

  <div class="cta-wrapper">
    <a class="cta-global" href="https://cloud.zilliz.com/signup?utm_source=partner&utm_medium=referral&utm_campaign=2025-02-24_doc_home_milvus.io">Zilliz Cloud</a>
    <a class="cta-cn" href="https://cloud.zilliz.com.cn/signup?utm_source=partner&utm_medium=referral&utm_campaign=2025-02-24_doc_home_milvus.io">Zilliz Cloud China</a>
  </div>
</div>

## Get Started

<div class="card-wrapper">

<div class="start_card_container">
  <a href="install_standalone-docker.md">
    <img src="../../../assets/home_install.svg" alt="icon" />
    <p class="link-btn">Install Milvus</p>
  </a>
  <p>Learn how to install Milvus using either Docker Compose or on Kubernetes.</p>
</div>

<div class="start_card_container">
  <a href="quickstart.md">
    <img src="../../../assets/home_quick_start.svg" alt="icon" />
    <p class="link-btn">Quick Start</p>
  </a>
  <p>Learn how to quickly run Milvus with sample code.</p>
</div>

<div class="start_card_container">
  <a href="/bootcamp">
    <img src="../../../assets/home_bootcamp.svg" alt="icon" />
    <p class="link-btn">Bootcamp</p>
  </a>
  <p>
  Learn how to build vector similarity search applications with Milvus.
  </p>
</div>

</div>

## Recommended articles

<div class="doc-home-recommend-section">

<div class="recomment-item">
  <p>Use</p>

- [Manage Collections](manage-collections.md)
- [Insert, Upsert, and Delete](insert-update-delete.md)
- [Index Vector Fields](index-vector-fields.md)
- [Single-Vector Search](single-vector-search.md)
- [Get & Scalar Query](get-and-scalar-query.md)
</div>

<div class="recomment-item">
  <p>Deploy</p>

- [Configure Milvus](configure-docker.md)
- [Manage Dependencies](deploy_s3.md)
- [Deploy on Clouds](eks.md)
- [Scale a Milvus Cluster](scaleout.md)
- [Monitor and Alert](monitor_overview.md)
</div>

<div class="recomment-item">
  <p>Learn</p>

- [System Configuration](system_configuration.md)
- [Architecture Overview](architecture_overview.md)
- [Vector Index](index.md)
- [Similarity Metrics](metric.md)
- [Glossary](glossary.md)
</div>

</div>

<div class="doc-home-what-is-new">

## What's new in docs

_Nov 2024 - Milvus 2.5.0 release_

- Added guidance on how to [conduct full text search](full-text-search.md).
- Added guidance on how to [conduct text match](keyword-match.md).
- Added guidance on how to [enable nullable and default values](nullable-and-default.md).
- Added descriptions of [analyzers](analyzer-overview.md).
- Added descriptions of [bitmap indexes](bitmap.md).

</div>
